wp_derive_request_builder/tests/fail/missing_url.stderr
error: Missing (url = "/foo")
 --> tests/fail/missing_url.rs:3:7
  |
3 |     #[contextual_get(params = &UserListParams, output = Vec<SparseUser>)]
  |       ^^^^^^^^^^^^^^
